add style.css. avoid delete nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" type="image/svg" href=" {{ '/assets/img/dev_icon.svg' | prepend: site.baseurl }}">
 
 {% seo %}
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+<link rel="stylesheet" href= "{{ '/assets/css/style.css' | prepend: site.baseurl }}" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     {% include head-custom.html %}
