Actualizar style.css reduce section/title space on print version

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,6 +500,11 @@ footer {
   }
   #banner{
     display:none;
+  }
+  section {
+    margin-top: 10px;
+  }
+
 }
 
 @media print, screen and (max-height: 680px) {
