Actualizar default.html add print.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,8 @@
 
 {% seo %}
 <link rel="stylesheet" href= "{{ '/assets/css/style.css' | prepend: site.baseurl }}" >
+
+<link rel="stylesheet" href= "{{ '/assets/css/print.css' | prepend: site.baseurl }}" >
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     {% include head-custom.html %}
