--- a/assets/css/print.css
+++ b/assets/css/print.css
@@ -1,4 +1,5 @@
 @page {
+  size: a4 landscape;
   /* margin box at top right showing page number */
   @top-right {
     content: "Page " counter(pageNumber);
