mejora en el formato del footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ Leap Day for GitHub Pages
 */
 
 body {
-  font:14px/22px 'Quattrocento Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font:14px/22px Helvetica, Arial, sans-serif;
   color:#2b2b2b;
   font-weight:300;
   margin: 0px;
@@ -360,14 +360,25 @@ nav {
 }
 
 footer {
-  width:180px;
+  width: 250px;
   position: fixed;
-  left:50%;
-  margin-left:-530px;
+  left:50px;
   bottom:20px;
-  text-align: right;
   line-height: 16px;
 }
+
+.contacto{
+  display: flex;
+  align-items: center;
+  }
+
+.contacto a{
+  padding: 2px 10px;
+  }
+
+.contacto img{
+  width: 24px;
+  }
 
 @media print, screen and (max-width: 1060px) {
 
@@ -412,7 +423,6 @@ footer {
   }
 
   footer{
-    text-align: center;
     margin: 20px auto;
     position: relative;
     left:auto;
@@ -511,7 +521,6 @@ footer {
 @media print, screen and (max-height: 680px) {
 
   footer {
-    text-align: center;
     margin: 20px auto;
     position: relative;
     left:auto;
@@ -523,7 +532,6 @@ footer {
 @media print, screen and (max-height: 480px) {
 
   footer {
-    text-align: center;
     margin: 20px auto;
     position: relative;
     left:auto;
