--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,15 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p> <img src="{{ '/assets/img/email.svg' | prepend: site.baseurl  }}" />  <a href="mailto:{{ site.email }}">{{ site.author_name }}</a></p>
-        {% endif %}
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <div >
+          <h4> Info y  Contacto: </h4>
+          <div class="contacto" >
+            <img src="{{ '/assets/img/email.svg' | prepend: site.baseurl  }}" />  <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+          </div>
+          <div class="contacto" >
+                  <img src="{{ '/assets/img/github.svg' | prepend: site.baseurl }}" /> <a href="{{ site.github.repository_url }}" > {{ site.github.repository_url | split: ".com" | last }} </a>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
